welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:22: error: type mismatch;
 found   : Unit
 required: Boolean
		case (true,true) => gauche(); if (estFaceMur) {droite(); return true}
                                              ^SnakeBuggle:23: error: type mismatch;
 found   : Unit
 required: Boolean
		case (false,true)=> droite(); if (estFaceMur) {gauche(); return true}
                                              ^