welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
// Fonction qui test si le Buggle est dans un angle (position finale)
baisseBrosse()
while (fonctionTest()==false)
	{if (estFaceMur)
		{if (getDirection()==Direction.EST)
			{gauche()
			avance()
			gauche()
			avance()}
		else {droite()
			avance()
			droite()
			avance()}
		}
	else {avance()}
	}
}

def fonctionTest():Boolean={
	(getDirection()==Direction.EST,estFaceMur) match {
		case (true,true) => gauche(); if (estFaceMur) {droite(); return true}
		case (false,true)=> droite(); if (estFaceMur) {gauche(); return true}
		case (_,_)	  => return false
	}
}